<resources>
    <string name="app_name">KotlinChatApp</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="login">Login</string>
    <string name="add_image">Add image</string>
    <string name="sign_out">Sign Out</string>
    <string name="bubble">Bubble</string>
    <string name="please_wait">Please Wait…</string>
    <string name="add_new_chat">Add New Chat</string>
    <string name="username">Username</string>
    <string name="email_info">Email Info</string>
    <string name="info">Info</string>
    <string name="send">Send</string>
    <string name="enter_text">Enter Text</string>
    <string name="empty_chat">Empty Chat</string>
    <string name="no_user_found">No User Found</string>
    <string name="no_conversations_found">No Conversations Found</string>
</resources>